<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poll Voting</string>
    <string name="action_settings">Settings</string>
    <string name="vote_yes">Yes</string>
    <string name="vote_no">No</string>
    <string name="voting_intro">Please pick one of the options provided:</string>
    <string name="vote_defaultquestion">Do you enjoy this app?</string>
    <string name="poll_results_button">View Poll Results</string>
    <string name="splashdescription">The Splash Image</string>
    <string name="poll_results_title">Poll Results</string>
    <string name="poll_name_placeholder">poll_name_placeholder</string>

</resources>
